feat: add Data Management Panel for clearing data categories with confirmation and feedback

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -11,6 +11,11 @@ TWILIO_ACCOUNT_SID=...
 TWILIO_AUTH_TOKEN=...
 TWILIO_PHONE_NUMBER=+19048718226
 
+# Voice Server (AWS App Runner — OpenAI Realtime API)
+# Set this to your deployed App Runner URL, e.g.:
+#   https://usapawn-voice-xxxxxxx.us-east-1.awsapprunner.com
+VOICE_SERVER_URL=...
+
 # Authentication
 DEMO_AUTH_PASSWORD=12345
 
