feat: add module type to package.json for ES module support

--- a/backend/realtime_voice/package.json
+++ b/backend/realtime_voice/package.json
@@ -1,6 +1,7 @@
 {
   "name": "usapawn-voice-server",
   "version": "1.0.0",
+  "type": "module",
   "private": true,
   "description": "USA Pawn Holdings — Realtime Voice AI (OpenAI Realtime API + Twilio Media Streams)",
   "main": "server.js",
