feat: add Price Lookup Tool for real-time valuation of metals
- Introduced PriceLookupTool component for calculating gold/silver/platinum values based on user input.
- Integrated spot price fetching from the API and manual entry options for weight and purity.
- Updated StaffPage to include a button for accessing the Price Lookup Tool.
- Enhanced metal parsing logic in metalParser utility for improved detection of metal types and purities.
- Added store status API to provide current store hours and status based on Eastern Time.
- Refactored ChatWidget to disable loading previous conversations, ensuring new chats are created each time.
- Improved DashboardChatHistory to fetch conversations with cache control.
- Updated UI components for better layout and responsiveness.

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -11,9 +11,9 @@ TWILIO_ACCOUNT_SID=...
 TWILIO_AUTH_TOKEN=...
 TWILIO_PHONE_NUMBER=+19048718226
 
-# Voice Server (AWS App Runner — OpenAI Realtime API)
-# Set this to your deployed App Runner URL, e.g.:
-#   https://usapawn-voice-xxxxxxx.us-east-1.awsapprunner.com
+# Voice Server (Render.com — OpenAI Realtime API)
+# Set this to your deployed Render URL, e.g.:
+#   https://usapawn-voice.onrender.com
 VOICE_SERVER_URL=...
 
 # Authentication
