feat: implement useVoiceChat hook for real-time voice interactions
- Added useVoiceChat hook to manage voice chat sessions with OpenAI's Realtime API.
- Implemented connection and disconnection logic, audio handling, and transcript management.
- Integrated data channel for communication and tool execution against Next.js API routes.

feat: create inventory search functionality

- Introduced inventory-search.ts for searching inventory items based on category and keyword.
- Implemented scoring and ranking logic for search results, including fallback mechanisms.

feat: add tag governance utilities

- Created tag-governance.ts to manage tag normalization, synonym resolution, and category matching.
- Implemented functions for sanitizing input, tokenizing search queries, and building searchable tokens.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,8 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "twilio": "^5.12.1"
+    "twilio": "^5.12.1",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
