--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -28,5 +28,10 @@ DAILY_QR_TOKEN_SECRET=your-secret-key-here
 # Optional: Metals API (for live gold prices)
 METALS_API_KEY=...
 
+# Optional: remove.bg API key (staff image background removal)
+# Sign up: https://www.remove.bg/api
+# Note: remove.bg usage is paid by credit after free trial credits.
+REMOVE_BG_API_KEY=...
+
 # Optional: Google Maps Embed API
 GOOGLE_MAPS_API_KEY=...
